# cgaspects

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CDA_equations.txt  CHANGELOG.md  CONTRIBUTING.md  CrystalAspects_GUI.spec  DATA_FILTER_FEATURE.md  README.md  index.html  pyproject.toml  requirements.txt  setup.py  sitemap.xml  standalone_growth_rate_plotter.py  test_filter.py  your_script.spec
.github/workflows/: deploy-docs.yml  package.yml
CG_DataProcessing.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
CrystalAspects/: requirements.txt
CrystalAspects.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
CrystalAspects/CrystalViewer/: CrystalViewer.py
CrystalAspects/GUI/: Cartisean.py  CrystalAspects.py  CrystalAspects.spec  CrystalAspects_GUI.py  CrystalAspects_GUI.spec  CrystalBox.py  InputWindow.ui  gui_commands.py  gui_threads.py  load_GUI.py  plottingPop.py  sliders.py
CrystalAspects/data/: CalculateAspectRatios.py  CrystalTest.py  GrowthRateCalc.py  aspect_ratios.py  calc_data.py  find_data.py  growth_rates.py
CrystalAspects/tools/: AspectRatioXYZ.py  OpenGL_OLD.py  crystal_math.py  crystal_slider.py  openGL.py  requirements.txt  shape_analysis.py  shape_txt.py  visualiser.py
CrystalAspects/visualisation/: Tables.py  plot_data.py  replotting.py  replotting.py.tmp
DataProcessor/GUI/: CG_DataProcessor.py  CrystalAspects.py  InputWindow.ui  gui_commands.py  load_GUI.py  requirements.txt
DataProcessor/data/: CrystalTest.py  __init__.py  aspect_ratios.py  calc_data.py  find_data.py  growth_rates.py
DataProcessor/tools/: highthroughput.py  pso.py  shape_analysis.py
DataProcessor/visualisation/: plot_data.py
analysis/aspect-ratios/: index.html
analysis/cluster-analysis/: index.html
analysis/growth-rates/: index.html
analysis/site-analysis/: index.html
crystalaspects/analysis/: GrowthRateCalc.py  aspect_ratios.py
crystalaspects/fileio/: find_data.py
crystalaspects/gui/: __main__.py  aspectratio_dialog.py  crystal_slider.py  gui_threads.py  load_ui.py  mainwindow.py  openGL.py  visualiser.py  window.ui
crystalaspects/utils/: crystal_slider.py  openGL.py  shape_analysis.py  visualiser.py
crystalaspects/visualisation/: Tables.py  plot_data.py  replotting.py
docs/: CGDataProcessor_Manual.txt  code_tree.txt  csv_checklist.csv  list.py  manual.txt  methods_list.txt
docs-site/: mkdocs.yml
docs-site/docs/: file-formats.md  index.md  installation.md  keyboard-shortcuts.md  plotting.md
docs-site/docs/analysis/: aspect-ratios.md  cluster-analysis.md  growth-rates.md  site-analysis.md
docs-site/docs/features/: axes.md  directions.md  lattice-parameters.md  planes.md  site-highlighting.md  slicing.md  visualisation.md
docs-site/docs/interface/: menus.md  overview.md  panels.md  viewport.md
docs-site/docs/science/: crystallography.md  shape-metrics.md  zingg-classification.md
docs-site/docs/tutorials/: basic-workflow.md  growth-rate-workflow.md  planes-and-slicing.md  site-analysis-workflow.md
examples/movies/test1/: 20240119_223615_summary.csv  GUI_simulation_data.txt  Urea.txt  net.txt
examples/normal/: urea_colouring.txt
examples/normal/20240118_223939/: 20240118_223939_summary.csv
examples/normal/test1/: net.txt
features/axes/: index.html
features/directions/: index.html
features/lattice-parameters/: index.html
features/planes/: index.html
features/site-highlighting/: index.html
features/slicing/: index.html
features/visualisation/: index.html
features/visualization/: index.html
file-formats/: index.html
installation/: index.html
installer/: CGAspects.py  CrystalAspects.py
interface/menus/: index.html
interface/overview/: index.html
interface/panels/: index.html
interface/viewport/: index.html
keyboard-shortcuts/: index.html
plotting/: index.html
res/: qticons.qrc
res/app_icons/: CGAspects.icns  CrystalAspects.icns
science/crystallography/: index.html
science/shape-metrics/: index.html
science/zingg-classification/: index.html
scripts/: bundle_disk_image.sh  bundle_tar_linux.sh  bundle_zip.ps1  edit.sh  linux_bundle.sh  macos_bundle.sh  make_icns.sh  windows_bundle.ps1
search/: search_index.json
src/cgaspects/: __main__.py
src/cgaspects/analysis/: ar_dataframes.py  aspect_ratios.py  cluster_analysis.py  gr_dataframes.py  growth_rates.py  gui_threads.py  shape_analysis.py  site_analysis.py  site_parser.py  solvent.py  sph.py
src/cgaspects/fileio/: find_data.py  logging.py  opendir.py  xyz_file.py
src/cgaspects/gui/: axes_renderer.py  camera.py  convert.sh  crystal_info.py  line_renderer.py  load_ui.py  mainwindow.py  mesh_renderer.py  openGL.py  shortcuts_manager.py  sphere_renderer.py  window.ui
src/cgaspects/plot/: plot_data.py
src/cgaspects/utils/: __init__.py  cg_net.py  crystal_items.py  data_smoothing.py  data_structures.py  plot_label.py  units.py
src/cgaspects/visualisation/: plot_data.py
src/crystalaspects/analysis/: ar_dataframes.py  aspect_ratios.py  gr_dataframes.py  growth_rates.py  gui_threads.py  shape_analysis.py
src/crystalaspects/fileio/: find_data.py  logging.py  opendir.py
src/crystalaspects/gui/: aspectratio_dialog.py  axes_renderer.py  camera.py  circular_progress.py  convert.sh  crystal_slider.py  growthrate_dialog.py  gui_threads.py  load_ui.py  mainwindow.py  mainwindow.ui  openGL.py  point_cloud_renderer.py  progress_dialog.py  qticons_rc.py  sphere_renderer.py  tables.py  visualiser.py  window.ui
src/crystalaspects/tools/: crystal_math.py
src/crystalaspects/utils/: shape_analysis.py
src/crystalaspects/visualisation/: plot_data.py  plot_dialog.py  (+1 more)
tests/: adipic.XYZ  adipic_final.csv  urea_summary.csv
tests/CrystalAspects/: aspectratio_energy.csv  failed_sims.csv
tests/CrystalAspects_Example/: PCA.csv  Percentage_Shapes_CDA.csv  Percentage_Shapes_PCA.csv  Total_Shapes_CDA.csv  Total_Shapes_PCA.csv
tutorials/basic-workflow/: index.html
tutorials/growth-rate-workflow/: index.html
tutorials/planes-and-slicing/: index.html
tutorials/site-analysis-workflow/: index.html
(+719 files in other folders)
