[project]
name = "cgaspects"
version = "0.8.4"
requires-python = ">=3.10"
description = "An analysis tool and companion for CrystalGrower"

authors = [
    { name = "Alvin Jenner Walisinghe", email = "jennerwalisinghe@gmail.com" },
    { name = "Nathan de Bruyn"},
    { name = "Peter R. Spackman", email = "peterspackman@fastmail.com" },
]
readme = "README.md"
license = { file = "LICENSE.txt" }
keywords = [
    "crystal growth",
    "crystal shape",
    "data analysis",
    "data visualisation",
    "computational chemistry"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "pyside6>=6.6.0",
    "pyqtgraph",
    "pyopengl",
    "numpy>=1.12",
    "pandas>=1.4",
    "scipy>=1.8.1",
    "trimesh>=3.12.9",
    "matplotlib>=3.5.2",
    "natsort>=8.2",
    "trimesh",
]

[project.urls]
homepage = "https://github.com/CrystalGrowerOrg/cgaspects"
repository = "https://github.com/CrystalGrowerOrg/cgaspects"

[project.scripts]
cgaspects = "cgaspects.gui.mainwindow:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --doctest-modules --doctest-ignore-import-errors"
testpaths = [
    "src/cgaspects/tests/pytests"
]
python_files = "test*.py"
python_classes = "Test*"
python_functions = "test_*"
log_level = "DEBUG"
norecursedirs = [
    "docs",
    "res",
    "*.egg-info",
    ".git",
    ".tox"
]
filterwarnings = "ignore::DeprecationWarning"
