[project]
name = "cgaspects"
version = "0.9.8"
requires-python = ">=3.10"
description = "An analysis tool and companion for CrystalGrower"

authors = [
    { name = "Alvin Jenner Walisinghe", email = "jennerwalisinghe@gmail.com" },
    { name = "Nathan de Bruyn"},
    { name = "Peter R. Spackman", email = "peterspackman@fastmail.com" },
]
readme = "README.md"
license = { file = "LICENSE.txt" }
keywords = [
    "crystal growth",
    "crystal shape",
    "data analysis",
    "data visualisation",
    "computational chemistry"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "matplotlib>=3.10.8",
    "natsort>=8.4.0",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "PyOpenGL>=3.1.10",
    "PySide6>=6.10.1",
    "PySide6_Addons>=6.7.2",
    "PySide6_Essentials>=6.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "trimesh>=4.8.3"
]


[project.urls]
homepage = "https://github.com/CrystalGrowerOrg/cgaspects"
repository = "https://github.com/CrystalGrowerOrg/cgaspects"

[project.scripts]
cgaspects = "cgaspects.gui.mainwindow:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --doctest-modules --doctest-ignore-import-errors"
testpaths = [
    "src/cgaspects/tests/pytests"
]
python_files = "test*.py"
python_classes = "Test*"
python_functions = "test_*"
log_level = "DEBUG"
norecursedirs = [
    "docs",
    "res",
    "*.egg-info",
    ".git",
    ".tox"
]
filterwarnings = "ignore::DeprecationWarning"
