[project]
name = "cgaspects"
version = "0.9.8.post1"
requires-python = ">=3.10"
description = "An analysis tool and companion for CrystalGrower"

authors = [
    { name = "Alvin J. Walisinghe", email = "jennerwalisinghe@gmail.com" },
    { name = "Peter R. Spackman", email = "peterspackman@fastmail.com" },
    { name = "Nathan de Bruyn"},
]
readme = "README.md"
license = { file = "COPYING.LESSER" }
keywords = [
    "crystal growth",
    "crystal shape",
    "data analysis",
    "data visualisation",
    "computational chemistry"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "matplotlib>=3.10.8",
    "natsort>=8.4.0",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "PyOpenGL>=3.1.10",
    "PySide6>=6.10.1",
    "PySide6_Addons>=6.7.2",
    "PySide6_Essentials>=6.7.2",
    "scikit-learn>=1.5.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "trimesh>=4.8.3",
    "imageio[ffmpeg]>=2.34.0"
]


[project.urls]
homepage = "https://github.com/CrystalGrowerOrg/cgaspects"
repository = "https://github.com/CrystalGrowerOrg/cgaspects"
documentation = "https://crystalgrowerorg.github.io/cgaspects/"

[project.scripts]
cgaspects = "cgaspects.gui.mainwindow:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --doctest-modules --doctest-ignore-import-errors"
testpaths = [
    "src/cgaspects/tests/pytests"
]
python_files = "test*.py"
python_classes = "Test*"
python_functions = "test_*"
log_level = "DEBUG"
norecursedirs = [
    "docs",
    "res",
    "*.egg-info",
    ".git",
    ".tox"
]
filterwarnings = "ignore::DeprecationWarning"
